<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.illinois.cs465.boardrate.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="edu.illinois.cs465.boardrate.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="edu.illinois.cs465.boardrate.ui.home.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="edu.illinois.cs465.boardrate.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="edu.illinois.cs465.boardrate.ui.login.LoginFragment"
        android:label="My Account"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_my_reviews"
        android:name="edu.illinois.cs465.boardrate.ui.notifications.MyReviewFragment"
        android:label="My Review"
        tools:layout="@layout/fragment_my_review" />
    <fragment
        android:id="@+id/navigation_my_saved_games"
        android:name="edu.illinois.cs465.boardrate.ui.notifications.MySavedGamesFragment"
        android:label="My Saved"
        tools:layout="@layout/fragment_my_saved_games" />
</navigation>