<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity = "center"
            android:textSize = "30dp"
            android:text = "My Saved Games"/>

        <SearchView
            android:id="@+id/simpleSearchView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabContentStart="0dp"
            app:tabGravity="fill"
            app:tabMaxWidth="0dp"
            app:tabMode="scrollable">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trending_tab_1" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trending_tab_2" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trending_tab_3" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trending_tab_4" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trending_tab_5" />

        </com.google.android.material.tabs.TabLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp"
                    android:gravity="top">
                    <!-- Media -->
                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/board_game3"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/board_game3_description"
                        />
                    <!-- Title, secondary and supporting text -->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/board_game3_title"
                            android:textSize="25dp"
                            android:textAppearance="?attr/textAppearanceHeadline6"
                            />


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center">
                            <RatingBar
                                android:id="@+id/simpleRatingBar"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:rating="3.5"
                                android:numStars="5"
                                style="?android:attr/ratingBarStyleSmall"
                                />

                            <!--                    <com.google.android.material.button.MaterialButton-->
                            <!--                        android:layout_width="wrap_content"-->
                            <!--                        android:layout_height="wrap_content"-->
                            <!--                        android:text="saved"-->
                            <!--                        style="?attr/borderlessButtonStyle"-->
                            <!--                        />-->
                            <ImageButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_save"
                                android:contentDescription="SAVE BUTTON"/>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="Party"
                                android:textAppearance="?attr/textAppearanceBody2"
                                android:textColor="?android:attr/textColorSecondary"
                                android:padding="10dp"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="4 Players"
                                android:textAppearance="?attr/textAppearanceBody2"
                                android:textColor="?android:attr/textColorSecondary"
                                android:padding="10dp"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="Card"
                                android:textAppearance="?attr/textAppearanceBody2"
                                android:textColor="?android:attr/textColorSecondary"
                                android:padding="10dp"
                                />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center">
                            <ImageButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_clock"
                                android:contentDescription="Duration"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="45min"
                                android:textAppearance="?attr/textAppearanceBody2"
                                android:textColor="?android:attr/textColorSecondary"
                                android:padding="10dp"
                                />
                        </LinearLayout>
                    </LinearLayout>




                </LinearLayout>





            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

</FrameLayout>